update template notebook

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -1,38 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "af7e540a-8ca2-466d-8fde-ca88be523b5a",
-   "metadata": {},
-   "source": [
-    "# Download Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93ea93aa-3ba5-4bcd-befe-4e53530b08ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac19393b-1511-4aef-8ec7-1d771ced934a",
-   "metadata": {},
-   "source": [
-    "# Convert to YOLO Format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cbf6e6a-9adf-4108-a2e4-124c1d77b61f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "98d2cc02",
    "metadata": {},
@@ -42,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93677f07",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "# Automatically read from your env variables\n",
-    "FIFTYONE_PORT = int(os.getenv(\"FIFTYONE_PORT\"))\n",
-    "FIFTYONE_URI = os.getenv(\"FIFTYONE_URI\")"
+    "FIFTYONE_PORT = int(os.getenv(\"FIFTYONE_PORT\", 5151))\n",
+    "FIFTYONE_URI = os.getenv(\"FIFTYONE_URI\", \"0.0.0.0\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e11f7e3d",
    "metadata": {},
@@ -63,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eafaf616",
+   "execution_count": 2,
+   "id": "61829652-8f0c-4e1f-a126-2636897c64c1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import fiftyone as fo\n",
+    "\n",
     "def ext(path):\n",
     "    _, file_ext = os.path.splitext(path)\n",
     "    return file_ext\n",
@@ -138,6 +110,20 @@
     "    \n",
     "    return bboxes, labels, scores\n",
     "\n",
+    "def create_dataset(imgs_path, labels_path, classes=None, name=\"eval_det\", xyxy=False):\n",
+    "    samples = []\n",
+    "    for img_path, label_path in zip(imgs_path, labels_path):\n",
+    "        sample = fo.Sample(filepath=img_path)\n",
+    "        gt_bboxes, gt_labels = read_yolo_label(label_path)\n",
+    "        gt_detections = [fo.Detection(label=str(label), bounding_box=bbox) for label, bbox in zip(gt_labels, gt_bboxes)]\n",
+    "        sample[\"ground_truth\"] = fo.Detections(detections=gt_detections)\n",
+    "        samples.append(sample)\n",
+    "    print(f'{len(samples)} images found')\n",
+    "    # Create dataset\n",
+    "    dataset = fo.Dataset(name, overwrite=True)\n",
+    "    dataset.add_samples(samples)\n",
+    "    return dataset\n",
+    "\n",
     "def fo_eval_det_dataset(imgs_path, labels_path, preds_path, classes=None, name=\"eval_det\", xyxy=False):\n",
     "    samples = []\n",
     "    for img_path, label_path, pred_path in zip(imgs_path, labels_path, preds_path):\n",
@@ -165,6 +151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7dc26425",
    "metadata": {},
@@ -174,31 +161,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27b70457",
+   "execution_count": 5,
+   "id": "07df2d3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9224 images found\n",
+      " 100% |███████████████| 9224/9224 [17.8s elapsed, 0s remaining, 416.3 samples/s]      \n"
+     ]
+    }
+   ],
    "source": [
-    "imgs_dir = \"YOUR-IMAGE-DIRECTORY\"\n",
-    "labels_dir = \"GT-LABELS-IMG-PATH\"\n",
-    "preds_dir = \"PREDS-LABELS-IMG-PATH\"\n",
+    "import glob\n",
+    "\n",
+    "imgs_dir = \"IVTXX17BBXX191024-01_Vehicle Detection Short Distance 5 & 17 Classes Dataset/images\"\n",
+    "labels_dir = \"IVTXX17BBXX191024-01_Vehicle Detection Short Distance 5 & 17 Classes Dataset/labels\"\n",
     "\n",
     "txt_exts = [\".txt\"]\n",
     "imgs_path = sorted([img_path for img_path in sorted(glob.glob(f\"{imgs_dir}/**/*.*\", recursive=True)) if ext(img_path) not in txt_exts])\n",
     "labels_path = sorted([label_path for label_path in sorted(glob.glob(f\"{labels_dir}/**/*.*\", recursive=True)) if ext(label_path) in txt_exts])\n",
-    "preds_path = sorted([pred_path for pred_path in sorted(glob.glob(f\"{preds_dir}/**/*.*\", recursive=True)) if ext(pred_path) in txt_exts])\n",
     "\n",
     "assert len(imgs_path)==len(labels_path)\n",
-    "assert len(labels_path)==len(preds_path)\n",
     "\n",
     "# fiftyone dataset\n",
-    "dataset = fo_eval_det_dataset(imgs_path, labels_path, preds_path, name=\"train_dataset_helmet\")"
+    "dataset = create_dataset(imgs_path, labels_path, name=\"vehicle_dataset\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07df2d3b",
+   "execution_count": 6,
+   "id": "7b3cc734-2c27-4048-8bff-0e5f7d305528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +201,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "15b75f62-10c7-40da-ba90-47ea7e0eb83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name:        vehicle_dataset\n",
+       "Media type:  image\n",
+       "Num samples: 9224\n",
+       "Persistent:  True\n",
+       "Tags:        []\n",
+       "Sample fields:\n",
+       "    id:           fiftyone.core.fields.ObjectIdField\n",
+       "    filepath:     fiftyone.core.fields.StringField\n",
+       "    tags:         fiftyone.core.fields.ListField(fiftyone.core.fields.StringField)\n",
+       "    metadata:     fiftyone.core.fields.EmbeddedDocumentField(fiftyone.core.metadata.ImageMetadata)\n",
+       "    ground_truth: fiftyone.core.fields.EmbeddedDocumentField(fiftyone.core.labels.Detections)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = fo.load_dataset(\"vehicle_dataset\")\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20f0b03f-fe12-4309-8622-27956efd4d08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\"http://0.0.0.0:5151/?notebook=True&subscription=bde904b1-0e3f-463d-aa02-7397d63f4c93\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fdc0975e910>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "session = fo.launch_app(dataset)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de3bd21f",
    "metadata": {},
@@ -218,7 +278,28 @@
    "execution_count": null,
    "id": "da7774a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading model from 'https://download.pytorch.org/models/resnext50_32x4d-7cdf4587.pth'...\n",
+      " 100% |████|  766.3Mb/766.3Mb [13.5s elapsed, 0s remaining, 66.3Mb/s]      \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/.local/lib/python3.8/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/root/.local/lib/python3.8/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNeXt50_32X4D_Weights.IMAGENET1K_V1`. You can also use `weights=ResNeXt50_32X4D_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/resnext50_32x4d-7cdf4587.pth\" to /root/.cache/torch/hub/checkpoints/resnext50_32x4d-7cdf4587.pth\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████| 95.8M/95.8M [00:13<00:00, 7.36MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import fiftyone.zoo as foz\n",
     "\n",
@@ -239,27 +320,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c9198d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# patches_embeddings = dataset.compute_patch_embeddings(model, patches_field=\"ground_truth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5cac8e75",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "np.save(\"full_frame_embeddings.npy\", img_embeddings)\n",
-    "# np.save(\"patches_embeddings.npy\", patches_embeddings)"
+    "np.save(\"full_frame_embeddings.npy\", img_embeddings)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31435632",
    "metadata": {},
@@ -322,6 +393,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c436d11",
    "metadata": {},
@@ -367,6 +439,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf485fa4",
    "metadata": {},
@@ -399,6 +472,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30345cee",
    "metadata": {},
@@ -428,6 +502,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e2d392d3",
    "metadata": {},
@@ -504,6 +579,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a07f7114",
    "metadata": {},
@@ -530,26 +606,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7f2d74e9",
-   "metadata": {},
-   "source": [
-    "### Case Bonceng Anak"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "101e12b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bonceng_anak_view = dataset.match_tags(\"bonceng_tiga_anak\")\n",
-    "fp_case_dataset  = bonceng_anak_view.clone()\n",
-    "fp_case_dataset.persistent = True"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a5ccb3f",
    "metadata": {},
@@ -579,17 +636,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "01d71e43",
    "metadata": {},
    "source": [
-    "## Your Custom Preprocessing Here"
+    "## Export Dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c79911fc",
+   "id": "e09f24b2-d07c-4903-989c-08ba2444dd86",
    "metadata": {},
    "outputs": [],
    "source": []
